src/components/mgt-person/mgt-person.scss
/**
 * -------------------------------------------------------------------------------------------
 * Copyright (c) Microsoft Corporation.  All Rights Reserved.  Licensed under the MIT License.
 * See License in the project root for license information.
 * -------------------------------------------------------------------------------------------
 */

@import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
@import '../../styles/shared-styles.scss';

$avatar-size-s: var(--avatar-size-s, 24px);
$avatar-size: var(--avatar-size, 48px);
$avatar-border: var(--avatar-border, 0);
$initials-color: var(--initials-color, white);
$initials-background-color: var(--initials-background-color, #{$ms-color-magenta});
$font-size: var(--font-size, #{$ms-font-size-m});
$font-weight: var(--font-weight, #{$ms-font-weight-semibold});
$color: var(--color, #{$ms-color-neutralDark});
$email-font-size: var(--email-font-size, #{$ms-font-size-s});
$email-color: var(--email-color, #{$ms-color-neutralPrimary});

:host {
  display: inherit;
}

:host .root {
  display: inline-block;
  color: $color;
  position: relative;
  vertical-align: top;
}

:host svg,
mgt-person svg {
  width: $avatar-size-s;
  height: $avatar-size-s;
}

:host img,
mgt-person img {
  border: var(--avatar-border);
  border-radius: 50%;
}

:host .person-root,
mgt-person .person-root {
  position: relative;
  display: flex;
  align-items: center;
  font-family: var(--default-font-family, 'Segoe UI');
}

:host .Details,
mgt-person .Details {
  flex: 1 1 auto;
  display: flex;
  flex-direction: column;
  margin-left: 12px;

  &.small {
    margin-left: 6px;
  }
}

:host .user-avatar,
mgt-person .user-avatar {
  width: $avatar-size;
  height: $avatar-size;
  display: flex;
  justify-content: center;
  align-items: center;

  &.initials {
    color: $initials-color;
    background-color: $initials-background-color;
    border-radius: 50%;
    font-weight: 400;
    font-size: 60%;
  }

  &.small {
    width: $avatar-size-s;
    height: $avatar-size-s;
  }

  &.row-span-2 {
    width: $avatar-size;
    height: $avatar-size;
  }

  img {
    height: 100%;
  }
}

:host .avatar-icon,
mgt-person .avatar-icon {
  flex: 1 1 auto;
  line-height: 1;
  margin: 0;
  font-size: $avatar-size;

  &.small {
    font-size: $avatar-size-s;
  }

  &.row-span-2 {
    grid-row: 1 / 3;
    -ms-grid-row: 1;
    -ms-grid-row-span: 2;
  }

  &.row-span-3 {
    grid-row: 1 / 4;
    -ms-grid-row: 1;
    -ms-grid-row-span: 3;
  }
}

:host .user-name,
mgt-person .user-name {
  font-size: $font-size;
  font-weight: $font-weight;
  white-space: nowrap;
  grid-column: 2;
  -ms-grid-column: 2;
}

:host .user-email,
mgt-person .user-email {
  color: $email-color;
  font-size: $email-font-size;
  white-space: nowrap;
  grid-column: 2;
  -ms-grid-column: 2;
  grid-row: 2;
  -ms-grid-row: 2;
}

.root .flyout {
  display: none;
  position: absolute;
  z-index: 1;
  opacity: 0;
  transition-property: opacity;
  transition-duration: 0.1s;
  padding: 8px;
}

.root .flyout.visible {
  display: inline-block;
  opacity: 1;
  &.openLeft {
    right: 0;
  }
}

